[project]
name = "ecal-docs"
requires-python = ">=3.10"
dependencies = [
  "sphinx",
  "sphinx-book-theme == 1.1.4", # Fixed, as we have custom CSS files that must be updated manually, whenever sphinx-book-theme is updated
  "sphinx-tabs == 3.4.7",       # Fixed, as we have custom CSS files that must be updated manually, whenever sphinx-tabs is updated
  "PyGithub",
  "autodoc",
  "semantic-version", 
  "exhale",
  "Jinja2",
  "sphinxcontrib-apidoc",
  "sphinxcontrib-youtube"
]
